--- a/src/app/views/categories/categories.component.html
+++ b/src/app/views/categories/categories.component.html
@@ -1,4 +1,4 @@
-<page-header title="Contas bancárias" icon="person" (newClick)="create()" />
+<page-header title="Categorias" icon="person" (newClick)="create()" />
 
 <div class="fin-table">
     <form class="search mb-10" [formGroup]="formGroup">
@@ -6,29 +6,30 @@
         <fin-button (click)="clear()" size="large" color="outlined" startIcon="delete">Limpar</fin-button>
         <fin-button (click)="find()" size="large" startIcon="search">Pesquisar</fin-button>
     </form>
-    @if(bankAccounts.length > 0) {
+    @if(categories.length > 0) {
         <section class="table-section">
             <table>
                 <thead>
+                    <th></th>
                     <th>Nome</th>
-                    <th>Saldo inicial</th>
-                    <th>Saldo total</th>
+                    <th>Tipo</th>
                     <th></th>
                 </thead>
                 <tbody>
-                    @for (account of bankAccounts; track account.bankAccountId) {
+                    @for (category of categories; track category.categoryId) {
                         <tr>
-                            <td>{{ account.name }}</td>
-                            <td>{{ account.initialAmount }}</td>
-                            <td>{{ account.initialAmount }}</td>
-        
+                            <td>
+                                <fin-category-icon [category]="category" />
+                            </td>
+                            <td>{{ category.name }}</td>
+                            <td>{{ category.operation }}</td>
                             <td class="more"><mat-icon [matMenuTriggerFor]="menu" class="material-symbols-outlined">more_vert</mat-icon></td>
                             <mat-menu #menu="matMenu">
-                                <button (click)="update(account.bankAccountId)" mat-menu-item>
+                                <button (click)="update(category.categoryId)" mat-menu-item>
                                     <mat-icon class="material-symbols-outlined">edit</mat-icon>
                                     <span>Editar</span>
                                 </button>
-                                <button (click)="delete(account)" mat-menu-item>
+                                <button (click)="delete(category)" mat-menu-item>
                                     <mat-icon class="material-symbols-outlined">delete</mat-icon>
                                     <span>Apagar</span>
                                 </button>
