--- a/src/theme/_material.scss
+++ b/src/theme/_material.scss
@@ -44,7 +44,7 @@ $finance-angular-theme: mat.m2-define-light-theme((
 }
 
 .mat-mdc-dialog-surface {
-  @apply bg-sidenav dark:bg-sidenav-dark text-text dark:text-text-dark shadow-lg max-w-lg rounded-xl p-6;
+  @apply bg-sidenav dark:bg-sidenav-dark text-text dark:text-text-dark shadow-lg rounded-xl p-6;
 }
 
 // .mat-mdc-menu-panel {
