--- a/src/theme/_reset.scss
+++ b/src/theme/_reset.scss
@@ -1,9 +1,9 @@
 ::-webkit-scrollbar {
-    @apply w-[.4rem] h-[.4rem] rounded bg-gray-400 dark:bg-gray-500;
+    @apply w-[.4rem] h-[.4rem] rounded bg-hover-dark/5;
 }
 
 ::-webkit-scrollbar-thumb {
-    @apply rounded bg-gray-600 dark:bg-gray-800;
+    @apply rounded bg-hover-dark;
 }
 
 ul {
