--- a/src/app/core/components/sidenav/components/header/components/date-view/components/month-view/month-view.component.html
+++ b/src/app/core/components/sidenav/components/header/components/date-view/components/month-view/month-view.component.html
@@ -1,9 +1,9 @@
-<div class="flex items-center justify-center gap-1 cursor-default">
+<div class="flex items-center justify-center gap-2 cursor-default">
     <chevron (click)="dateControl.previousMonth()" direction="left"></chevron>
     <span (click)="dateControl.changeView()" class="flex items-center justify-center border-2 text-sm border-primary text-primary py-1 px-2 rounded-3xl
         hover:bg-gray-100
         dark:border-text-dark dark:text-text-dark dark:hover:bg-hover-dark">
-        <mat-icon class="text-base mb-0.5">calendar_month</mat-icon>
+        <mat-icon class="text-base mb-0.5 mr-1">calendar_month</mat-icon>
         <b class="mr-0.5">{{ dateControl.getMonthLabel() | async }}</b>
         {{ dateControl.year | async }}
     </span>
