--- a/src/app/views/dashboard/components/expenses-card/expenses-card.component.html
+++ b/src/app/views/dashboard/components/expenses-card/expenses-card.component.html
@@ -9,7 +9,7 @@
             </div>
             <div class="flex flex-col">
                 <span class="font-bold text-error">R$ 2,562.20</span>
-                <span class="font-bold">R$ 5,562.20</span>
+                <span>R$ 5,562.20</span>
             </div>
         </div>
     </div>
