--- a/src/app/shared/fin-forms/fin-select/fin-select.component.scss
+++ b/src/app/shared/fin-forms/fin-select/fin-select.component.scss
@@ -1,5 +1,5 @@
 :host {
     .arrow-icon.mat-icon {
-        @apply absolute right-1 top-9 hover:bg-hover-dark rounded-full cursor-pointer;
+        @apply absolute right-2 hover:bg-hover-dark rounded-full cursor-pointer;
     }
 }
