--- a/src/app/views/auth/register/register.component.html
+++ b/src/app/views/auth/register/register.component.html
@@ -19,6 +19,7 @@
         required 
         placeholder="000.000.000-00"
         formControlName="cpf"
+        mask="000.000.000-00"
       />
       <fin-input 
         label="Email"
