--- a/src/app/views/bank-accounts/components/bank-account-modal/bank-account-modal.component.html
+++ b/src/app/views/bank-accounts/components/bank-account-modal/bank-account-modal.component.html
@@ -9,7 +9,7 @@
   <fin-input label="Nome" name="name" placeholder="Itaú" required formControlName="name" />
   <fin-input label="Valor inicial" currency name="initialAmount" placeholder="R$ 12.99" required formControlName="initialAmount" />
 
-  <div class="flex justify-end">
+  <div class="flex justify-end mt-4">
     <fin-button (click)="submit()" >Enviar</fin-button>
   </div>
 </form>
