--- a/src/app/shared/fin-forms/fin-textarea/fin-textarea.component.html
+++ b/src/app/shared/fin-forms/fin-textarea/fin-textarea.component.html
@@ -1,4 +1,4 @@
-<label class="block mt-3 mb-2 text-sm font-medium text-text dark:text-text-dark" [for]="name" *ngIf="label">{{ label }}</label>
+<label class="text-start block mt-3 mb-2 text-sm font-medium text-text dark:text-text-dark" [for]="name" *ngIf="label">{{ label }}</label>
 
 <textarea 
 [id]="name" 
