--- a/src/app/shared/fin-ui/fin-category-icon/fin-category-icon.component.html
+++ b/src/app/shared/fin-ui/fin-category-icon/fin-category-icon.component.html
@@ -1,1 +1,8 @@
-<mat-icon class="material-symbols-outlined category-icon" [style.background]="category.color+'30'" [style.color]="category.color" [matTooltip]="category.name">{{ category.icon }}</mat-icon>
+<mat-icon 
+class="material-symbols-outlined category-icon"
+[class.small]="size === 'small'"
+[style.background]="category.color+'30'" 
+[style.color]="category.color" 
+[matTooltip]="category.name">
+    {{ category.icon }}
+</mat-icon>
