--- a/src/app/views/dashboard/components/expenses-card/expenses-card.component.html
+++ b/src/app/views/dashboard/components/expenses-card/expenses-card.component.html
@@ -8,8 +8,8 @@
                 <span>Previsto</span>
             </div>
             <div class="flex flex-col">
-                <span class="font-bold text-error">R$ 2,562.20</span>
-                <span>R$ 5,562.20</span>
+                <span class="font-bold text-error">{{ expensesReport.paid | currency: 'BRL' }}</span>
+                <span>{{ expensesReport.expected | currency: 'BRL' }}</span>
             </div>
         </div>
     </div>
